<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_menu_profile"
            android:title="@string/nav_menu_profile" />
        <item
            android:id="@+id/nav_information"
            android:icon="@drawable/ic_menu_information"
            android:title="@string/nav_menu_information" />

        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_menu_about"
            android:title="@string/nav_menu_about" />
    </group>

    <item android:title="@string/nav_menu_section_communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:title="@string/nav_menu_contact_us" />
            <item
                android:id="@+id/nav_feedback"
                android:title="@string/nav_menu_feedback"/>
        </menu>
    </item>

</menu>
