<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/TextColor"
        android:orientation="vertical">


        <ProgressBar
            android:id="@+id/login_progressBar"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/padding">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/login_image_app_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@mipmap/ic_launcher_foreground" />

                <TextView
                    android:id="@+id/login_tv_app_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="18dp"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:fontFamily="@font/pompiere"
                    android:text="@string/app_name"
                    android:textAppearance="@android:style/TextAppearance.Large"
                    android:textSize="48sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <TextView
                android:id="@+id/login_tv_emailid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/login_tv_email"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/login_et_emailid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:hint="@string/login_editText_hint_email"
                android:inputType="textWebEmailAddress"
                android:padding="14dp"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/login_tv_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/login_tv_password"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/login_et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_editText_hint_password"
                android:inputType="textPassword"
                android:padding="14dp" />

            <Button
                android:id="@+id/login_btn_submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:background="@drawable/button_background_enabled"
                android:padding="@dimen/padding"
                android:text="@string/login_button_submit"
                android:textColor="@color/TextColor" />

            <TextView
                android:id="@+id/login_tv_signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:gravity="center"
                android:padding="@dimen/padding"
                android:text="@string/login_tv_signUp"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:onClick="onSignUp"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>